# play-xv6-riscv

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  xmake.lua
.cargo/: config.toml
crates/hal/: Cargo.toml
crates/hal-aarch64/: Cargo.toml
crates/hal-aarch64/asm/: entry.S  kernelvec.S  trampoline.S
crates/hal-aarch64/src/: csr.rs  gic.rs  lib.rs  memlayout.rs  pagetable.rs  psci.rs  start.rs  trap.rs  trapframe.rs  uart.rs
crates/hal-riscv64/: Cargo.toml
crates/hal-riscv64/asm/: entry.S  kernelvec.S  trampoline.S
crates/hal-riscv64/src/: csr.rs  lib.rs  memlayout.rs  pagetable.rs  plic.rs  start.rs  trap.rs  trap_hook.rs  trapframe.rs  uart.rs
crates/hal/src/: lib.rs
crates/kernel/: Cargo.toml  build.rs  kernel-aarch64.ld  kernel.ld
crates/kernel/src/: arch.rs  console.rs  console_in.rs  cpu.rs  elf.rs  embed.rs  executor.rs  file.rs  heap.rs  kalloc.rs  main.rs  proc.rs  sync.rs  syscall.rs  time.rs  trap.rs  uapi.rs  user_vm.rs  usertrap.rs  vm.rs  wait.rs
crates/kernel/src/driver/: bio.rs  mod.rs  virtio_blk.rs
crates/kernel/src/fs/: bmap.rs  dir.rs  inode.rs  log.rs  mod.rs  path.rs  superblock.rs
crates/kernel/user/: README  alarmtest.c  cat.c  chmodtest.c  cloexectest.c  credtest.c  ctimetest.c  echo.S  echo.c  env.c  envtest.c  faulttest.c  fdfiletest.c  hello.S  initcode-aarch64.S  initcode.S  ioctltest.c  kill.c  killtest.c  lazytest.c  ln.c  ls.c  malloctest.c  mkdir.c  mmaptest.c  picohello.c  picotest.c  pipetest.S  polltest.c  posix6test.c  printf.c  pwd.c  rm.c  seektest.c  sh.c  sigactest.c  sigmasktest.c  sigtest.c  smptest.c  stattime.c  (+12 more)
crates/xv6-fs-layout/: Cargo.toml
crates/xv6-fs-layout/src/: lib.rs
docs/todos/: README.md
docs/todos/done/00-scaffold-boot/: README.md
docs/todos/done/01-hal-spinlock-percpu/: README.md
mkfs/: Cargo.toml
mkfs/src/: main.rs
(+46 files in other folders)
