[workspace]
resolver = "2"
members = ["crates/hal", "crates/hal-aarch64", "crates/hal-riscv64", "crates/kernel", "crates/xv6-fs-layout", "mkfs"]
# `cargo build` from workspace root only builds the kernel; `mkfs` must
# be built with `cargo build -p mkfs --target=<host>` (see Makefile) so
# it doesn't pick up the riscv64 default target.
default-members = ["crates/kernel"]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[profile.dev]
panic = "abort"
opt-level = 1
debug = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
debug = true
