[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
hal = { path = "../hal" }
xv6-fs-layout = { path = "../xv6-fs-layout" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
hal-riscv64 = { path = "../hal-riscv64" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
hal-aarch64 = { path = "../hal-aarch64" }
